# gameboy-emulator

./: .gitignore  Cargo.toml  debug.gb  justfile
src/: cpu.rs  main.rs  memory.rs  opcodes.rs  ppu.rs  registers.rs
