[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = { version = "0.29.4", features = ["rwh_05"]}
winit_input_helper = "0.14"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2